Fixed front_page and sidebar bugs
front_page was modifying the loop while executing query_posts making is_front_page return false on fotter, fixed it by changing query_posts to get_posts method.

sidebar left margin was too big causing the main content to be displaced downward on some browsers

--- a/src/style.css
+++ b/src/style.css
@@ -264,7 +264,7 @@ div.clear {
 aside {
     float: right;
     width: 25%;
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 div.post-entries {
